# AetherStem

./: .gitignore  README.md  pyproject.toml
.github/workflows/: validation.yml
ai/: __init__.py  batch.py
ai/adapters/: __init__.py  base.py  denoise.py  enhancement.py  separation.py
ai/backends/: __init__.py  base.py  onnx_runtime.py  registry.py  torch_runtime.py
ai/benchmarking/: __init__.py  degradation_corpus.py  runtime_comparison.py
ai/compute/: __init__.py  backend.py  onnx_backend.py  tensor_rt_backend.py  torch_backend.py
ai/inference/: __init__.py  batching.py  executor.py  scheduler.py  streaming.py
ai/metrics/: __init__.py
ai/models/: __init__.py  _placeholder.py  base.py  manager.py  metadata.py  registry.py
ai/models/demucs/: __init__.py  (+5 more)
ai/optimization/: __init__.py  calibration.py  precision.py  quantization.py  runtime_profiles.py
ai/orchestration/: __init__.py  decision_engine.py  graph.py  presets.py  routing.py
ai/reconstruction/: __init__.py  core.py
ai/reference/: __init__.py
ai/runtime/: __init__.py  audio_buffer.py  cancellation.py  chunk_scheduler.py  context.py  device_manager.py  executor.py  memory_manager.py  progress.py  stream_pipeline.py  tensor_contracts.py
ai/telemetry/: __init__.py  events.py  profiler.py  reports.py  tracer.py
ai/validation/: __init__.py  artifact_detector.py  phase_validator.py  quality_comparator.py  spectral_validator.py
audio_io/: audio_converter.py  audio_inspector.py  audio_loader.py
benchmarks/: __init__.py  runner.py
cache/: .gitkeep
cli/: main.py
cli/help/: __init__.py  diagnostics.py  examples.py  formatter.py  metadata.py  registry.py  search.py  workflows.py
configs/: default.yaml
docs/: AI_PIPELINE.md  BACKEND_ABSTRACTION.md  CHUNK_SCHEDULER.md  CLI_GUIDANCE.md  DSP_ANALYSIS.md  MODEL_INTEGRATION.md  MODEL_REGISTRY.md  ORCHESTRATION.md  RECONSTRUCTION_ENGINE.md  RUNTIME_LIFECYCLE.md  STREAMING_PIPELINE.md  TODO.md
dsp/: clipping.py  lossy_detector.py  loudness.py  noise_floor.py  phase.py  resample_detector.py  spectrum.py  stereo.py  visualizer.py
exports/vocals_layers_reconstruct/: reconstruction_report.json
models/: audio_analysis.py  audio_metadata.py  audio_quality.py  base.py  pipeline_result.py
pipeline/: runner.py
pipeline/stages/: analyze.py  export.py  inspect.py  preprocess.py
presets/: archival_restore.yaml  lossy_recovery.yaml  mastering_prep.yaml  podcast_cleanup.yaml  vocal_cleanup.yaml
reports/: .gitkeep
tests/: test_backend_abstraction.py  test_chunk_scheduler.py  test_cli_help_metadata.py  test_lossy_detector.py  test_loudness.py  test_model_manifest_registry.py  test_model_registry.py  test_orchestration.py  test_pipeline.py  test_reconstruction_forensic.py  test_reconstruction_graph.py  test_reconstruction_pipeline.py  test_reconstruction_rendering.py  test_runtime_acceleration.py  test_runtime_adapter.py  test_runtime_audio_buffer.py  test_runtime_cancellation.py  test_runtime_graph.py  test_spectrum.py  test_validation_engine.py  test_visualizer.py
tests/v07/: test_adaptive_intelligence.py
tests/validation/: test_validation_framework.py
utils/: cache.py  config_loader.py  logger.py
validation/: __init__.py  degradation.py  golden.py  matrix.py  metrics.py  reporting.py  run_full_validation.py  static_checks.py  synthetic_audio.py
(+147 files in other folders)
