[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherstem"
version = "0.3.0"
description = "AI-assisted music source separation platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "AetherStem Team" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "numpy",
    "scipy",
    "soundfile",
    "librosa",
    "ffmpeg-python",
    "pydub",
    "rich",
    "typer",
    "pyyaml",
    "tqdm",
    "pyloudnorm",
    "matplotlib",
    "pillow",
    "pydantic>=2.0",
    "torch",
    "torchaudio",
    "onnx",
    "onnxruntime",
    "huggingface_hub",
    "einops",
    "accelerate",
    "safetensors",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
aetherstem = "cli.main:app"

[tool.setuptools.packages.find]
include = ["ai*", "audio_io*", "cli*", "dsp*", "models*", "pipeline*", "utils*"]
