[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherstem"
version = "0.4.0"
description = "AI-assisted music source separation platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "AetherStem Team" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "numpy",
    "scipy",
    "soundfile",
    "librosa",
    "ffmpeg-python",
    "pydub",
    "rich",
    "typer",
    "pyyaml",
    "tqdm",
    "pyloudnorm",
    "matplotlib",
    "pillow",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
validation = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pyright",
]
runtime-cpu = [
    "onnx",
    "onnxruntime",
    "huggingface_hub",
    "einops",
    "safetensors",
]
runtime-cuda = [
    "onnx",
    "onnxruntime-gpu",
    "torch",
    "torchaudio",
    "accelerate",
    "einops",
    "safetensors",
]
runtime-dev = [
    "pytest",
    "pytest-cov",
    "onnx",
    "onnxruntime",
]

[project.scripts]
aetherstem = "cli.main:app"

[tool.setuptools.packages.find]
include = ["ai*", "audio_io*", "benchmarks*", "cli*", "dsp*", "models*", "pipeline*", "utils*", "validation*"]
